--- a/assets/css/portafolio.css
+++ b/assets/css/portafolio.css
@@ -57,7 +57,7 @@ a:hover{
 }
 .desc{
     margin-top: 10px;
-    font-size: 35px;
+    font-size: 2.2rem;
     color: beige;
     font-family: 'Source Code Pro', monospace;
     text-transform: lowercase;
